@@ -1,5 +1,4 @@
 - "split pages into 2" mode
-- cbr in cbr support
 - smooth scroll
 - individual frame zooming + frames editor
 - dosage support
