@@ -3,6 +3,9 @@
 			 -- support for nested cbr archives
                          -- new option: "Save page as"
 			 -- new option: Auto-adjust cache size
+			 -- added small (15 pct) overlap when scrolling page with
+			    Space/Backspace
+			 -- In-built help was removed
 
 2006-11-29:  0.3.4       -- fixed drawing/scaling/rotation bugs in two-pages
                             mode when 1st page is smaller than 2nd page.
